--- a/www/index.html
+++ b/www/index.html
@@ -546,12 +546,20 @@
                     $("#belownav").fadeIn(1000);
                     break;
                 case pages.PROCESSING:
+                    $("#menu").fadeIn(1000.);
+                    $("#belownav").fadeIn(1000);
                     break;
                 case pages.CLIENT_ERROR:
+                    $("#menu").fadeIn(1000.);
+                    $("#belownav").fadeIn(1000);
                     break;
                 case pages.SERVER_ERROR:
+                    $("#menu").fadeIn(1000.);
+                    $("#belownav").fadeIn(1000);
                     break;
                 case pages.RESET:
+                    $("#menu").fadeIn(1000.);
+                    $("#belownav").fadeIn(1000);
                     this.refresh_captchas();
                     if ($("#menu").css("display") != "none")
                         $("#menu").fadeOut(1000.);
@@ -567,6 +575,8 @@
                     $("#logout_button").removeClass("active")
                     break;
                 case pages.POLICY:
+                    $("#menu").fadeIn(1000.);
+                    $("#belownav").fadeIn(1000);
 
                     $("#home_button").removeClass("active")
                     $("#browse_button").removeClass("active")
@@ -578,6 +588,8 @@
                     $("#logout_button").removeClass("active")
                     break;
                 case pages.REQUEST:
+                    $("#menu").fadeIn(1000.);
+                    $("#belownav").fadeIn(1000);
                     this.refresh_captchas();
 
                     $("#home_button").removeClass("active")
@@ -590,6 +602,8 @@
                     $("#logout_button").removeClass("active")
                     break;
                 case pages.HOME:
+                    $("#menu").fadeIn(1000.);
+                    $("#belownav").fadeIn(1000);
 
                     $("#home_button").addClass("active")
                     $("#browse_button").removeClass("active")
@@ -601,6 +615,8 @@
                     $("#logout_button").removeClass("active")
                     break;
                 case pages.BROWSE:
+                    $("#menu").fadeIn(1000.);
+                    $("#belownav").fadeIn(1000);
 
                     $("#home_button").removeClass("active")
                     $("#browse_button").addClass("active")
@@ -612,6 +628,8 @@
                     $("#logout_button").removeClass("active")
                     break;
                 case pages.EDIT:
+                    $("#menu").fadeIn(1000.);
+                    $("#belownav").fadeIn(1000);
                     this.refresh_captchas();
 
                     $("#home_button").removeClass("active")
@@ -626,6 +644,8 @@
                     this.set_ui_algorithm(default_create_algorithm);
                     break;
                 case pages.CREATE:
+                    $("#menu").fadeIn(1000.);
+                    $("#belownav").fadeIn(1000);
 
                     $("#home_button").removeClass("active")
                     $("#browse_button").removeClass("active")
@@ -637,9 +657,13 @@
                     $("#logout_button").removeClass("active")
                     break;
                 case pages.DELETE_ACCOUNT:
+                    $("#menu").fadeIn(1000.);
+                    $("#belownav").fadeIn(1000);
                     this.refresh_captchas();
                     break;
                 case pages.PROFILE:
+                    $("#menu").fadeIn(1000.);
+                    $("#belownav").fadeIn(1000);
 
                     $("#home_button").removeClass("active")
                     $("#browse_button").removeClass("active")
@@ -651,6 +675,8 @@
                     $("#logout_button").removeClass("active")
                     break;
                 case pages.LOGIN:
+                    $("#menu").fadeIn(1000.);
+                    $("#belownav").fadeIn(1000);
                     this.refresh_captchas();
 
                     $("#home_button").removeClass("active")
@@ -663,6 +689,8 @@
                     $("#logout_button").removeClass("active")
                     break;
                 case pages.SIGNUP:
+                    $("#menu").fadeIn(1000.);
+                    $("#belownav").fadeIn(1000);
                     this.refresh_captchas();
 
                     $("#home_button").removeClass("active")
@@ -675,6 +703,8 @@
                     $("#logout_button").removeClass("active")
                     break;
                 case pages.LOGOUT:
+                    $("#menu").fadeIn(1000.);
+                    $("#belownav").fadeIn(1000);
                     this.refresh_captchas();
 
                     $("#home_button").removeClass("active")
@@ -980,8 +1010,6 @@
                     this.popovers.splice(i, 1)
                     i--;
                 }
-                else
-                    break;
             }
         }
 
