--- a/www/index.html
+++ b/www/index.html
@@ -42,6 +42,7 @@
         <a id="login_button" onclick="state.collapse_nav(); state.refresh_content('#login')" class="logged_out_content" href="#login">Login</a>
         <a id="signup_button" onclick="state.collapse_nav(); state.refresh_content('#signup')" class="logged_out_content" style="display: none" href="#signup">Sign Up</a>
         <a id="logout_button" onclick="state.collapse_nav(); state.refresh_content('#logout')" class="logged_in_content" style="display: none" href="#logout">Log Out</a>
+        <a id="reset" style="display: none;" onclick="state.collapse_nav(); state.refresh_content('#reset')" href="#reset">Reset</a>
         <a href="javascript:void(0);" class="icon" onclick="state.toggle_nav()">
             <div class="bar"></div>
             <div class="bar"></div>
