--- a/www/index.html
+++ b/www/index.html
@@ -835,7 +835,8 @@
                 $(function () {
                     page = 'popover' + this.popover_counter;
                     html =
-                        '<div class="popover row disconnected_content"\n' +
+                        '<div class="popover">\n' +
+                        '<div class="row disconnected_content"\n' +
                         '    style="margin: 0px !important; z-index: 400; position:relative; text-align:center; border:none !important; height:100%; width:100%;  overflow-y: auto; background-color: rgba(0., 0., 0., 0.);"\n' +
                         '    id="' + page + '">\n' +
                         '    <div class="col-0 col-sm-0 col-md-1 col-lg-2">\n' +
@@ -863,12 +864,11 @@
                         '    <div class="col-0 col-sm-0 col-md-1 col-lg-2">\n' +
                         '    </div>\n' +
                         '</div>\n';
+                        '</div>\n';
 
                     var element = $(html);
                     $("#popovers").append(element);
-                    element.popover({
-                        container: 'body'
-                    }).fadeIn(1000, function (response) {
+                    element.fadeIn(1000, function (response) {
                     }.bind(this))
 
                     this.popover_counter++;
@@ -886,7 +886,8 @@
                 $(function () {
                     page = 'popover' + this.popover_counter;
                     html =
-                        '<div class="popover row disconnected_content"\n' +
+                        '<div class="popover">\n' +
+                        '<div class="row disconnected_content"\n' +
                         '    style="margin: 0px !important; z-index: 400; position:relative; text-align:center; border:none !important; height:100%; width:100%;  overflow-y: auto; background-color: rgba(0., 0., 0., 0.);"\n' +
                         '    id="' + page + '">\n' +
                         '    <div class="col-0 col-sm-0 col-md-1 col-lg-2">\n' +
@@ -912,12 +913,11 @@
                         '    <div class="col-0 col-sm-0 col-md-1 col-lg-2">\n' +
                         '    </div>\n' +
                         '</div>\n';
+                        '</div>\n';
 
                     var element = $(html);
                     $("#popovers").append(element);
-                    element.popover({
-                        container: 'body'
-                    }).fadeIn(1000, function (response) {
+                    element.fadeIn(1000, function (response) {
                     }.bind(this))
 
                     this.popover_counter++;
@@ -935,7 +935,8 @@
                 $(function () {
                     page = 'popover' + this.popover_counter;
                     html =
-                        '<div class="popover row disconnected_content"\n' +
+                        '<div class="popover">\n' +
+                        '<div class="row disconnected_content"\n' +
                         '    style="margin: 0px !important; z-index: 400; position:relative; text-align:center; border:none !important; height:100%; width:100%;  overflow-y: auto; background-color: rgba(0., 0., 0., 0.);"\n' +
                         '    id="' + page + '">\n' +
                         '    <div class="col-0 col-sm-0 col-md-1 col-lg-2">\n' +
@@ -960,12 +961,11 @@
                         '    <div class="col-0 col-sm-0 col-md-1 col-lg-2">\n' +
                         '    </div>\n' +
                         '</div>\n';
+                        '</div>\n';
 
                     var element = $(html);
                     $("#popovers").append(element);
-                    element.popover({
-                        container: 'body'
-                    }).fadeIn(1000, function (response) {
+                    element.fadeIn(1000, function (response) {
                     }.bind(this))
 
                     this.popover_counter++;
