--- a/www/index.html
+++ b/www/index.html
@@ -835,7 +835,7 @@
                 $(function () {
                     page = 'popover' + this.popover_counter;
                     html =
-                        '<div class="popover"\n' +
+                        '<div class="message_popover"\n' +
                         '    id="' + page + '">\n' 
                         '<div class="row disconnected_content"\n' +
                         '    style="margin: 0px !important; z-index: 400; position:relative; text-align:center; border:none !important; height:100%; width:100%;  overflow-y: auto; background-color: rgba(0., 0., 0., 0.);">\n' +
@@ -886,7 +886,7 @@
                 $(function () {
                     page = 'popover' + this.popover_counter;
                     html =
-                        '<div class="popover"\n' +
+                        '<div class="message_popover"\n' +
                         '    id="' + page + '">\n' 
                         '<div class="row disconnected_content"\n' +
                         '    style="margin: 0px !important; z-index: 400; position:relative; text-align:center; border:none !important; height:100%; width:100%;  overflow-y: auto; background-color: rgba(0., 0., 0., 0.);">\n' +
@@ -935,7 +935,7 @@
                 $(function () {
                     page = 'popover' + this.popover_counter;
                     html =
-                        '<div class="popover"\n' +
+                        '<div class="message_popover"\n' +
                         '    id="' + page + '">\n' 
                         '<div class="row disconnected_content"\n' +
                         '    style="margin: 0px !important; z-index: 400; position:relative; text-align:center; border:none !important; height:100%; width:100%;  overflow-y: auto; background-color: rgba(0., 0., 0., 0.);>"\n' +
