--- a/www/index.html
+++ b/www/index.html
@@ -836,7 +836,7 @@
                     page = 'popover' + this.popover_counter;
                     html =
                         '<div class="message_popover"\n' +
-                        '    id="' + page + '">\n' 
+                        '    id="' + page + '">\n' +
                         '<div class="row disconnected_content"\n' +
                         '    style="margin: 0px !important; z-index: 400; position:relative; text-align:center; border:none !important; height:100%; width:100%;  overflow-y: auto; background-color: rgba(0., 0., 0., 0.);">\n' +
                         '    <div class="col-0 col-sm-0 col-md-1 col-lg-2">\n' +
@@ -887,7 +887,7 @@
                     page = 'popover' + this.popover_counter;
                     html =
                         '<div class="message_popover"\n' +
-                        '    id="' + page + '">\n' 
+                        '    id="' + page + '">\n'+ 
                         '<div class="row disconnected_content"\n' +
                         '    style="margin: 0px !important; z-index: 400; position:relative; text-align:center; border:none !important; height:100%; width:100%;  overflow-y: auto; background-color: rgba(0., 0., 0., 0.);">\n' +
                         '    <div class="col-0 col-sm-0 col-md-1 col-lg-2">\n' +
@@ -936,7 +936,7 @@
                     page = 'popover' + this.popover_counter;
                     html =
                         '<div class="message_popover"\n' +
-                        '    id="' + page + '">\n' 
+                        '    id="' + page + '">\n'+
                         '<div class="row disconnected_content"\n' +
                         '    style="margin: 0px !important; z-index: 400; position:relative; text-align:center; border:none !important; height:100%; width:100%;  overflow-y: auto; background-color: rgba(0., 0., 0., 0.);>"\n' +
                         '    <div class="col-0 col-sm-0 col-md-1 col-lg-2">\n' +
