--- a/www/index.html
+++ b/www/index.html
@@ -349,10 +349,6 @@
                 }
             }.bind(this);
             this.websocket.onopen = function () {
-                if (this.first_connection) {
-                    //    this.handle_navigation();
-                    this.first_connection = false;
-                }
                 this.show_logged_out_content();
                 this.hide_popovers();
                 if (window.location.hash == pages.RECONNECT 
@@ -369,7 +365,7 @@
                 }
                     
 
-                if (user_query_param && code_query_param) {
+                if (this.first_connection && user_query_param && code_query_param) {
                     state.user_name = user_query_param;
                     $("#hidden_username1").val(user_query_param);
                     $("#hidden_username2").val(user_query_param);
@@ -387,6 +383,10 @@
                     }).finish())
                     routed = true;
                     window.history.replaceState({}, document.title, removeURLParameter(removeURLParameter(window.location.href, "user"), "code"));
+                }
+                if (this.first_connection) {
+                    //    this.handle_navigation();
+                    this.first_connection = false;
                 }
             }.bind(this);
 
