--- a/www/index.html
+++ b/www/index.html
@@ -392,7 +392,7 @@
                     }
                     else{
                         this.show_page(pages.CLIENT_ERROR, "Error! Invalid reset token.", "Please use the password reset functionality to change your password.", true, function (popover) {
-                            this.show_page(pages.RESET);    
+                            this.show_page(pages.HOME);    
                         }.bind(this));
                     }
                 }
