--- a/www/home.html
+++ b/www/home.html
@@ -31,18 +31,18 @@
             <br>
             <br>
             <div style="text-align: center;">
-                <button type="button" style=" background-color: rgba(0,0,0,.75);"
+                <button type="button"
                     class="btn btn-outline-primary mx-auto" onclick="state.show_page(pages.POLICY);">View
                     Privacy Policy</button>
-                <button type="button" style=" background-color: rgba(0,0,0,.75);"
+                <button type="button"
                     class="btn btn-outline-success mx-auto" onclick="state.show_page(pages.BROWSE); ">Browse</button>
-                <button type="button" style=" background-color: rgba(0,0,0,.75);"
+                <button type="button"
                     class="btn btn-outline-success mx-auto" onclick="state.show_page(pages.EDIT); ">Edit</button>
-                <button type="button" style=" background-color: rgba(0,0,0,.75);"
+                <button type="button"
                     class="btn btn-outline-success mx-auto" onclick="state.show_page(pages.CREATE); ">Create</button>
-                <button type="button" style=" background-color: rgba(0,0,0,.75);"
+                <button type="button"
                     class="btn btn-outline-success mx-auto" onclick="state.show_page(pages.PROFILE);">Profile</button>
-                <button type="button" style=" background-color: rgba(0,0,0,.75);" class="btn btn-outline-danger mx-auto"
+                <button type="button" class="btn btn-outline-danger mx-auto"
                     onclick="state.show_page(pages.LOGOUT);">Log
                     Out</button>
             </div>
