--- a/www/index.html
+++ b/www/index.html
@@ -1252,6 +1252,27 @@
             }
             this.deleting_account = true;
         }
+
+
+        GlobalState.prototype.login = function () {
+            var email_or_name = $("#login_name_or_email").val();
+            var pwd = $("#login_password").val();
+            var captcha = $("#login_captcha_input").val();
+
+
+            this.show_page(pages.PROCESSING, "Logging in...", "Please wait...", false);
+            this.send(Message.encode({
+                type: Message.Type.LOGIN,
+                auth: {
+                    user: email_or_name,
+                    email: email_or_name,
+                    password: pwd
+                },
+                captcha: {
+                    key: captcha
+                }
+            }).finish())
+        }
         state = new GlobalState();
         on_resources_loaded();
     </script>
