--- a/www/index.html
+++ b/www/index.html
@@ -1482,7 +1482,7 @@
                     '        <div class="col-12 col-sm-12 col-md-12 col-lg-12">\n' +
                     '            <textarea id="' + context_identifier + '_width_exact_js" rows="8"\n' +
                     '                style="text-align:left; border: 1px solid #FFF;" placeholder="Enter JavaScript here..."\n' +
-                    '                value="{{algorithm.client}}"></textarea>\n' +
+                    '                value="{algorithm.client}"></textarea>\n' +
                     '        </div>\n' +
                     '        <br>\n' +
                     '    </div>\n' +
@@ -1566,7 +1566,7 @@
                     '        <div class="col-12 col-sm-12 col-md-12 col-lg-12">\n' +
                     '            <textarea id="' + context_identifier + '_height_exact_js" rows="8"\n' +
                     '                style="text-align:left; border: 1px solid #FFF;" placeholder="Enter JavaScript here..."\n' +
-                    '                value="{{algorithm.client}}"></textarea>\n' +
+                    '                value="{algorithm.client}"></textarea>\n' +
                     '        </div>\n' +
                     '        <br>\n' +
                     '    </div>\n' +
