--- a/www/index.html
+++ b/www/index.html
@@ -49,6 +49,8 @@
             style="display: none" href="#logout">Log Out</a>
         <a id="reset_button" style="display: none;" onclick="state.collapse_nav(); state.refresh_content('#reset')"
             href="#reset">Reset</a>
+        <a id="request_button" style="display: none;" onclick="state.collapse_nav(); state.refresh_content('#request')"
+            href="#request">Request</a>
         <a href="javascript:void(0);" class="icon" onclick="state.toggle_nav()">
             <div class="bar"></div>
             <div class="bar"></div>
