--- a/www/edit.html
+++ b/www/edit.html
@@ -16,7 +16,7 @@
                         style="height:512px; border: 1px solid #fff !important;">
 
                         <iframe onload="state.iframe_loaded()" sandbox="allow-scripts allow-same-origin" allow="microphone" style="border:1px solid #fff; width: 100%; height: 100%;"
-                            src="canvas.html" id="preview_iframe"></iframe>
+                            src="canvas.html?algorithm=liberatus" id="preview_iframe"></iframe>
                     </div>
                 </div>
                 <br>
