--- a/www/index.html
+++ b/www/index.html
@@ -74,11 +74,11 @@
         {{login.html}}
         {{signup.html}}
     </div>
-    <!-- <div fixed id="iframeDiv"
+    <div fixed id="iframeDiv"
         style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; height: 100%; width: 100%; z-index: -1;">
-        <iframe sandbox="allow-scripts" allow="microphone" style="border: 0; margin: 0px !important;" src="canvas.html"
-            id="mainIframe" class="webGLDiv"></iframe> -->
-
+        <iframe sandbox="allow-scripts" allow="microphone" style="border: 0; margin: 0px !important;" src="canvas.html?algorithm=background"
+            id="backgroundIframe" class="webGLDiv"></iframe>
+    </div>
     <script>
         var iframe = null;
 
