--- a/www/index.html
+++ b/www/index.html
@@ -74,11 +74,8 @@
         {{login.html}}
         {{signup.html}}
     </div>
-    <div fixed id="iframeDiv"
-        style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; height: 100%; width: 100%; z-index: -1;">
-        <iframe sandbox="allow-scripts" allow="microphone" style="border: 0; margin: 0px !important;" src="canvas.html?algorithm=background"
-            id="backgroundIframe" class="webGLDiv"></iframe>
-    </div>
+    <iframe sandbox="allow-scripts allow-same-origin" allow="microphone" style="border:1px solid #fff; width: 100%; height: 100%;"
+        src="canvas.html?algorithm=liberatus" id="background_iframe"></iframe>
     <script>
         var iframe = null;
 
