--- a/www/index.html
+++ b/www/index.html
@@ -75,7 +75,7 @@
         {{signup.html}}
     </div>
     <iframe sandbox="allow-scripts allow-same-origin" allow="microphone" style="border:1px solid #fff; width: 100%; height: 100%;"
-        src="canvas.html?algorithm=liberatus" id="background_iframe"></iframe>
+        src="canvas.html?algorithm=background" id="background_iframe"></iframe>
     <script>
         var iframe = null;
 
