--- a/www/index.html
+++ b/www/index.html
@@ -548,7 +548,7 @@
         GlobalState.prototype.show_logged_out_content = function (new_page) {
             $.each($(".logged_in_content"), function () {
                 // if ($(this).is(":visible") && ($(new_page).has($(this)).length > 0 || $(this).parents().has("#menu").length > 0))
-                    $(this).fadeOut(1000);
+                    $(this).css("display", "none");
             });
             $.each($(".logged_out_content"), function () {
                 if ($(this).is(":hidden") && ($(new_page).has($(this)).length > 0 || ($(this).parents().has("#menu").length > 0))) {
