--- a/www/index.html
+++ b/www/index.html
@@ -573,7 +573,7 @@
             $.each($(".logged_out_content"), function () {
                 //if($(this).is(":visible") && 
                 // if (($(new_page).has($(this)).length > 0 || $(this).parents().has("#menu").length > 0))
-                $(this).fadeOut(1000);
+                $(this).css("display", "none");
             });
         }
 
