--- a/www/edit.html
+++ b/www/edit.html
@@ -13,7 +13,7 @@
                 style="text-align:center; padding-top: 14px; padding-bottom: 14px; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                 <div class="row" style="height:512px;">
                     <div class="col-12 col-sm-12 col-md-12 col-lg-12"
-                        style="height:512px; border: 1px solid #fff !important;">
+                        style="height:512px;">
 
                         <iframe onload="state.iframe_loaded()" sandbox="allow-scripts allow-same-origin" allow="microphone" style="border:1px solid #fff; width: 100%; height: 100%;"
                             src="canvas.html?algorithm=liberatus" id="preview_iframe"></iframe>
