--- a/www/index.html
+++ b/www/index.html
@@ -177,6 +177,8 @@
                 // Captcha = this.protocol.lookupType("messages.Captcha");
                 Message = this.protocol.lookupType("messages.Message");
 
+
+
                 default_opengl_dimension = {
                     type: OpenGLDimension.Type.SCREEN_SIZE,
                     exact_value: "//Retrun the floating point value of a javascript evaulation here. It is re-evaluated every frame."
@@ -237,105 +239,15 @@
                     mesh_indices_eval: "return []; //Return indices to vertices array."
                 }
 
-                default_create_algorithm = {
-                    name: "Default Algorithm",
-                    type: Message.Type.ALGORITHM,
-                    state: {
-                        has_html: false,
-                        has_client: true,
-                        has_server: false
+                $.ajax({
+                    type: 'GET',
+                    url: 'algorithms/default',
+                    success: function(data) {
+                        console.log(data);
+                        default_create_algorithm = JSON.parse(data)
                     },
-                    html: null,
-                    client:
-                        "var canvas = pipeline.contexts[pipeline.contexts.length-1].canvas;\n" +
-                        "\n" +
-                        "canvas.style.position = \'fixed\';\n" +
-                        "canvas.style.width = \'100%\';\n" +
-                        "canvas.style.height = \'100%\';\n" +
-                        "document.body.prepend(canvas);\n" +
-                        "function res(){\n" +
-                        "    pipeline.contexts[pipeline.contexts.length-1].resizeCanvas()\n" +
-                        "}\n" +
-                        "window.addEventListener('resize', res);\n" +
-                        "",
-                    pipeline: {
-                        contexts: [
-                            {
-                                name: 'image-context',
-                                width: {
-                                    type: OpenGLDimension.Type.SCREEN_SIZE,
-                                    exact_value: ""
-                                },
-                                height: {
-                                    type: OpenGLDimension.Type.SCREEN_SIZE,
-                                    exact_value: ""
-                                },
-                                depth_test: false
-                            }
-                        ],
-                        programs: [
-                            {
-                                name: 'output-program',
-                                uniforms: [
-                                    {
-                                        type: OpenGLUniform.Type.FLOAT,
-                                        name: 'width',
-                                        value: 'return pipeline.getContext(\'image-context\').canvas.width;'
-                                    },
-                                    {
-                                        type: OpenGLUniform.Type.FLOAT,
-                                        name: 'height',
-                                        value: 'return pipeline.getContext(\'image-context\').canvas.height;'
-                                    },
-                                    {
-                                        type: OpenGLUniform.Type.FLOAT,
-                                        name: 'time',
-                                        value:
-                                            'if(!this.timeUniformStart) this.timeUniformStart = ((new Date()).getTime())/1E3;\n' +
-                                            '   return ((new Date()).getTime())/1E3-this.timeUniformStart;'
-                                    }
-                                ],
-                                frag_code:
-                                    "precision highp float;\n" +
-                                    "precision highp int;\n" +
-                                    "\n" +
-                                    "#define UNIFORM_INSERTION_POINT\n" +
-                                    "\n" +
-                                    "varying vec2 vPosition;\n" +
-                                    "        \n" +
-                                    "void main()\n" +
-                                    "{\n" +
-                                    "    vec2 uv = vPosition;\n" +
-                                    "    gl_FragColor.rgb = vec3(sin(uv*3.14+time)*.5+.5, sin(time)*.5+.5);\n" +
-                                    "    gl_FragColor.a = 1.0;\n" +
-                                    "}\n",
-                                vert_code:
-                                    "precision highp float;\n" +
-                                    "precision highp int;\n" +
-                                    "\n" +
-                                    "#define UNIFORM_INSERTION_POINT\n" +
-                                    "\n" +
-                                    "attribute highp vec4 vertex; \n" +
-                                    "\n" +
-                                    "varying vec2 vPosition;\n" +
-                                    "void main(void) {\n" +
-                                    "    vPosition = vertex.xy;\n" +
-                                    "    gl_Position = vec4(vPosition*2.-1., 0., 1.);\n" +
-                                    "}\n"
-                            }
-                        ],
-                        stages: [
-                            {
-                                type: OpenGLStage.Type.SHADER,
-                                name: 'main-stage',
-                                context_name: 'image-context',
-                                program_name: 'output-program',
-                                mesh_vertices_eval: null,
-                                mesh_indices_eval: null
-                            }
-                        ]
-                    }
-                };
+                    async: false
+                });
 
                 this.show_page(pages.PROCESSING, "Connecting...", "Please be patient.", false);
                 this.connect();
