--- a/www/index.html
+++ b/www/index.html
@@ -244,7 +244,7 @@
                     url: 'algorithms/default',
                     success: function(data) {
                         console.log(data);
-                        default_create_algorithm = JSON.parse(data)
+                        default_create_algorithm = JSON.parse(data);
                     },
                     async: false
                 });
