--- a/www/index.html
+++ b/www/index.html
@@ -243,8 +243,7 @@
                     type: 'GET',
                     url: 'algorithms/default.json',
                     success: function(data) {
-                        console.log(data);
-                        default_create_algorithm = JSON.parse(data);
+                        default_create_algorithm = data;
                         this.show_page(pages.PROCESSING, "Connecting...", "Please be patient.", false);
                         this.connect();
                     }.bind(this),
