--- a/www/browse.html
+++ b/www/browse.html
@@ -15,7 +15,19 @@
 </head>
 
 <body>
-    <h1>Meow</h1>
+    <div class="col-0 col-sm-0 col-md-0 col-lg-1">
+    </div>
+    <div class="col-12 col-sm-12 col-md-12 col-lg-10">
+        <br>
+        <h1 class="read_only"
+            style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+            <a style="color:#FFF!important; ">Algorithm Preview:</a>
+        </h1>
+        <br>
+    </div>
+    <div class="col-0 col-sm-0 col-md-0 col-lg-1">
+    </div>
+    
 </body>
 
 </html>
