--- a/www/index.html
+++ b/www/index.html
@@ -763,7 +763,11 @@
         }
         GlobalState.prototype.collapse_nav = function () {
             var x = document.getElementById("menu");
-            $("#menu a:not(:first-child)").removeClass("responsive");
+            $("#menu a:not(:first-child)").animate({
+                transform: "translate(0%, -100%)"
+            }, 1000, function () {
+                element.removeClass("responsive");
+            });
         }
 
         function is_popover(page) {
